Revert IsaacIntegrationTest to use withFileSystemBind instead of withCopyFileToContainer
Restores the original approach used before commit faac45a3c0 which changed
PostgreSQL database script mounting from withFileSystemBind to withCopyFileToContainer.
This reverts to the simpler file system binding approach.